<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">订餐小助手</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="aa_account">AA记账</string>
    <string name="individual_account">单独记账</string>
    <string name="member">成员管理</string>
    <string name="add_member">增加成员</string>
    <string name="del_member">减少成员</string>
    <string name="balance">余额一览</string>
    <string name="receive_money">入账</string>
    <string name="find_money">查账</string>
    <string name="advance_record">入账记录</string>

    <string name="title_activity_aacount">AACountActivity</string>
    <string name="select_member">选择成员</string>
    <string name="sum">总金额</string>
    <string name="input">请输入</string>
    <string name="cashback">返现</string>
    <string name="save">保存</string>
	<string name="dinning">商家</string>

    <string name="title_activity_add_member">AddMemberActivity</string>
    <string name="member_name">姓名</string>
    <string name="initial_balance">初始余额</string>
    <string name="title_activity_sepcount">SepcountActivity</string>
    <string name="title_activity_receive_money">ReceiveMoneyActivity</string>

    <string name="head">这里是HeadView</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>

    <string name="text_forward">增加</string>
    <string name="text_back">返回</string>
    <string name="title_activity_banlace">BanlaceActivity</string>
    <string name="title_activity_advance_record">AdvanceRecordActivity</string>
    <string name="title_activity_detail">DetailActivity</string>

</resources>
