<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.example.jcs.orderassistant.ui.AddMemberActivity">

    <LinearLayout
        android:id="@+id/addM_line1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView android:text="@string/member_name"
            android:textColor="@color/black"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/addM_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/input"
            android:layout_weight="2"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/addM_line2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/addM_line1"
        android:orientation="horizontal" >

        <TextView android:text="@string/initial_balance"
            android:textColor="@color/black"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/addM_initBalance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="0"
            android:numeric="signed"
            android:layout_weight="2"/>
    </LinearLayout>

    <Button
        android:id="@+id/addM_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/addM_line2"
        android:gravity="center"
        android:text="@string/save"/>

</RelativeLayout>
