<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/white"
    tools:context="com.example.jcs.orderassistant.ui.AACountActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ListView
            android:id="@+id/member_lv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4">
        </ListView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/aa_sum"
                android:layout_width="0dp"
                android:inputType="numberDecimal"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/sum"
                android:numeric="integer"/>

            <EditText
                android:id="@+id/aa_return"
                android:layout_width="0dp"
                android:inputType="numberDecimal"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/cashback"
                android:numeric="integer"/>

            <EditText
                android:id="@+id/dinning"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/dinning"/>

        </LinearLayout>

        <Button
            android:id="@+id/AADateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            ></Button>

        <Button
            android:id="@+id/AASaveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/save"/>
    </LinearLayout>

</RelativeLayout>
