<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/white"
    tools:context="com.example.jcs.orderassistant.ui.SepcountActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/test_padding_margin">

        <ListView
            android:id="@+id/member_sep_lv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5">
        </ListView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_margin="@dimen/test_padding_margin">
            <EditText
                android:id="@+id/sep_return"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="numberDecimal"
                android:hint="@string/cashback"
                android:numeric="integer"/>
            <EditText
                android:id="@+id/sep_dinning"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/dinning"/>
        </LinearLayout>


        <Button
            android:id="@+id/SepDateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            ></Button>

        <Button
            android:id="@+id/SepSaveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/save"/>
    </LinearLayout>

</RelativeLayout>
