<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/layout_titlebar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#ffffff"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ellipsize="marquee"
            android:gravity="center_horizontal|center"
            android:singleLine="true"
            android:text="订餐小秘书"
            android:textColor="#000000"
            android:textSize="20dp" />

        <Button
            android:id="@+id/button_forward"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@drawable/title_button_selector"
            android:drawablePadding="6dp"
            android:ellipsize="end"
            android:gravity="center"
            android:onClick="onClick"
            android:paddingLeft="5dp"
            android:singleLine="true"
            android:text="+"
            android:textColor="#808080"
            android:textSize="40dp"
            android:visibility="invisible" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/img"
        android:layout_width="fill_parent"
        android:layout_height="220dp"
        android:layout_below="@id/layout_titlebar"
        android:scaleType="fitXY"
        android:src="@drawable/tulips" />

    <LinearLayout
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/img"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/AAButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/aa_account" />

        <Button
            android:id="@+id/IndButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/individual_account" />

    </LinearLayout>

    <TextView
        android:id="@+id/BalanceTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line"
        android:gravity="center"
        android:text="@string/balance" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_weight="1"
        android:layout_below="@id/BalanceTextView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.example.jcs.orderassistant.ui.PullToRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/refresh_view"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_below="@+id/BalanceTextView">

                <include layout="@layout/refresh_head" />
                <!-- 支持所有实现Pullable接口的View -->

                <com.example.jcs.orderassistant.ui.PullableListView
                    android:id="@+id/content_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:divider="@color/gray"
                    android:dividerHeight="1dp" />

                <include layout="@layout/load_more" />

            </com.example.jcs.orderassistant.ui.PullToRefreshLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/bottomLine"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/scrollView"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/ListOfAccounts"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/find_money" />

        <Button
            android:id="@+id/RMButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/receive_money" />
    </LinearLayout>


</RelativeLayout>
